# discord-bot-rivalz

./: .env.example  .replit  .restart-log  EXTERNAL_RESTART_SOLUTION.md  Procfile  README.md  REPLIT_README.md  UPTIMEROBOT_SETUP.md  advanced_features.py  ai_integration.py  all_commands_list.md  app.py  autolike_commands.py  autolike_commands_old.py  bot.py  bot_health_check.py  bot_monitor.py  bot_restart.py  cache_manager.py  command_count_check.py  commands.py  commands_clean.py  community_features.py  comprehensive_commands_list.md  database_init.py  db_app.py  deploy.py  deploy_fix.py  deployment_check.py  deployment_summary.py  discord_fix.py  economy_system.py  entertainment_commands.py  extended_commands.py  final_discord_test.py  final_status_check.py  fun_image_features.py  github-setup.js  goodbye_settings.json  gunicorn.conf.py  (+33 more)
.github/workflows/: external-restart.yml  uptimerobot-webhook.yml
cogs/: diagnostic.py  errors.py
